--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@coreui/coreui": "^4.2.0",
@@ -30,6 +32,9 @@
     "react-toastify": "^8.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3"
+  },
+  "engines": {
+    "node": "16.15.1"
   },
   "devDependencies": {
     "css-loader": "^6.7.1"
