--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "semantic-ui-react": "^2.1.3"
   },
   "engines": {
-    "node": "16.16.0"
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "devDependencies": {
     "css-loader": "^6.7.1"
