--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "^5.2.0",
     "glamor": "^2.20.40",
     "mongoose": "^6.5.0",
-    "next": "latest",
+    "next": "^12.2.5",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
